<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DeepHole</string>

    <string-array name="recipient_list">
        <item>Odbiorca</item>
        <item>deephole@op.pl</item>
        <item>recipient@foo.com</item>
        <item>anotherrecipient@foo.com</item>
    </string-array>

    <color name="myRed">#C00000</color>
	<color name="myBlack">#000F0F</color>

    <string name="title_activity_draft">DraftActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_overview">OverviewActivity</string>
    <string name="title_activity_full_screen_hole">FullScreenHoleActivity</string>
    <string name="title_activity_hole_radar">HoleRadarActivity</string>
    <string name="title_activity_login">LoginActivity</string>
	<string name="action_settings">Ustawienia</string>
	<string name="reset">Wyczyść</string>
    <string name="chooseManually">Wybór manualny</string>
    <string name="chooseAuto">Auto-lokalizacja</string>
    <string name="descriptionHint">Opis ubytku</string>
	<string name="descriptionPrompt">Opis ubytku:</string>
	<string name="nonDescription">Brak opisu</string>
	<string name="descShortPrompt">Opis:</string>
	<string name="localizationPrompt">Lokalizacja:</string>
	<string name="deepHoleWarning">Uwaga! Głęboka dziura...</string>
    <string name="sendForm">Wyślij</string>
    <string name="newHole">Zgłoś dziurę</string>
    <string name="signup">Zarejestruj</string>
    <string name="login">Zaloguj się</string>
    <string name="browse">Lista dziur</string>
    <string name="name">Nazwa użytkownika</string>
    <string name="password">Hasło</string>
    <string name="mail">Adres e-mail</string>
    <string name="logout">Wyloguj</string>
	<string name="wrongPassword">Błędne hasło.</string>
	<string name="wrongMail">Podano błędny adres mailowy.</string>
	<string name="wrongPeselLength">Niepoprawna długość numeru PESEL.</string>
	<string name="wrongPesel">Błędny numer PESEL.</string>
	<string name="wrongName">Błędna nazwa użytkownika.</string>
	<string name="nameDuplicated">Podana nazwa użytkownika już istnieje.</string>
	<string name="accountCreated">Pomyślnie utworzono konto, proszę się zalogować.</string>
	<string name="loggedIn">Zalogowano jako.</string>
	<string name="confirmLocation">Potwierdź lokalizację</string>

</resources>
