<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/wersjatrzecia"
    android:orientation="vertical"
    android:weightSum="11">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/hole_photo"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
		android:onClick="takePhoto"
        android:layout_weight="1"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/description"
        android:maxLines="2"
        android:lines="2"
        android:layout_marginBottom="1dp"
        android:hint="@string/descriptionHint"
        android:backgroundTint="@color/myRed"
        android:layout_weight="2"/>

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/recipient_list"
        android:layout_marginBottom="1dp"
        android:layout_weight="2"/>

    <RadioGroup
        android:id="@+id/localization_menu"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="1dp"
        android:layout_weight="2"
        android:weightSum="2">

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/chooseAuto"
            android:id="@+id/auto_radio_button"
            android:checked="true"
            android:layout_weight="1"/>

        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/chooseManually"
            android:id="@+id/manual_radio_button"
            android:layout_weight="1"/>
    </RadioGroup>
<!--
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="15"
        android:id="@+id/sender_signature"
        android:layout_above="@+id/confirm_button"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:hint="Please insert PESEL."/>
-->


    <Button
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/sendForm"
        android:id="@+id/confirm_button"
        android:textAllCaps="false"
        android:background="#00000000"
        android:onClick="validateMailData"
        android:layout_weight="2"/>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:ems="15"
        android:id="@+id/loggedUser"
        android:layout_marginBottom="1dp"
        android:text="Who Is Logged?"
        android:layout_weight="2"/>

</LinearLayout>