<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:background="@drawable/loginactivitybackground"
                android:gravity="bottom"
                tools:context="project.deephole.RegisterAccountActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text=""
        android:id="@+id/TitleTextView"
        android:layout_alignParentTop="true"
        android:backgroundTint="@color/myRed"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:ems="10"
        android:id="@+id/nameText"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:backgroundTint="@color/myRed"
        android:layout_marginTop="60dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:ems="10"
        android:id="@+id/passwordText"
        android:layout_below="@+id/nameText"
        android:layout_alignParentLeft="true"
        android:backgroundTint="@color/myRed"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/mail"
        android:ems="10"
        android:id="@+id/emailText"
        android:layout_below="@+id/passwordText"
        android:layout_alignParentLeft="true"
        android:backgroundTint="@color/myRed"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="Telefon"
        android:ems="10"
        android:id="@+id/phoneText"
        android:layout_below="@+id/emailText"
        android:layout_alignParentLeft="true"
        android:backgroundTint="@color/myRed"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="PESEL"
        android:ems="10"
        android:id="@+id/peselText"
        android:layout_below="@+id/phoneText"
        android:layout_alignParentLeft="true"
        android:backgroundTint="@color/myRed"
        android:layout_alignParentStart="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:id="@+id/saveButton"
        android:onClick="onSave"
        android:layout_below="@+id/peselText"
        android:background="#00000000"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"/>
</RelativeLayout>
